# GGoblast

./: LICENSE  README.md  pyproject.toml
hakaton/hakaton/: settings.py
src/config/: settings.py  urls.py
src/hakaton/: asgi.py  settings.py  urls.py  wsgi.py
src/layout/: admin.py  forms.py  models.py  urls.py  views.py
src/layout/migrations/: 0001_initial.py  0002_event_interests.py  0002_news_rename_end_time_event_end_at_and_more.py  0003_alter_event_name_alter_interest_name_and_more.py  0003_alter_news_options_rename_name_event_title.py  0004_alter_profile_surname.py
src/layout/static/: style.css
src/layout/static/css/: style.css
src/layout/static/layout/css/: style.css
src/layout/templates/: base.html  event.html  events-base.html  main.html  new-events.html  register.html
src/layout/templates/layout/: base.html  event.html  events-base.html  events.html  main.html  register.html
